# pounce

./: .gitignore  Cargo.toml  LICENSE  README.md  build.rs  sprt_test.sh
benches/: pawn_movegen.rs  perft.rs  search.rs
examples/: perft.rs  perft_alt.rs
src/: bench.rs  bitboard.rs  board.rs  chess.rs  datagen.rs  eval.rs  fen.rs  lib.rs  limits.rs  magic.rs  magic_finder.rs  magic_gen.rs  main.rs  movegen.rs  movepicker.rs  moves.rs  position.rs  score.rs  search.rs  table.rs  tt.rs  uci.rs  util.rs  zobrist.rs
src/movegen/: bishop.rs  king.rs  knight.rs  magic.rs  magic_finder.rs  magic_gen.rs  pawn.rs  queen.rs  rook.rs  tables.rs  types.rs
ui/: index.html  package-lock.json  package.json  vite.config.ts
ui/src/: App.css  App.tsx
