[package]
name = "pounce"
authors = ["alex flick"]
edition = "2021"
build = "build.rs"
default-run = "pounce"

[profile.release]
lto = true
debug = true

[dependencies]
arrayvec = "0.7.4"
bitflags = "2.6.0"
clap = { version = "4.5.15", features = ["derive"] }
rand = { version = "0.8.5", features = ["small_rng"] }
rustyline = "14.0.0"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo"] }

[[bench]]
name = "pawn_movegen"
harness = false
