[package]
name = "pounce"
authors = ["alex flick"]
edition = "2021"
build = "build.rs"
default-run = "pounce"

[profile.release]
opt-level = 3
debug = false
rpath = false
debug-assertions = false
codegen-units = 1
lto = true
panic = "abort"

[profile.profile]
inherits = "release"
debug = true

[dependencies]
anyhow = "1.0.86"
arrayvec = "0.7.4"
bitflags = "2.6.0"
clap = { version = "4.5.15", features = ["derive"] }
ctrlc = "3.4.5"
rand = { version = "0.8.5", features = ["small_rng"] }
rand_core = "0.6.4"
rustyline = "14.0.0"
thiserror = "1.0.63"

[dev-dependencies]
criterion = { version = "0.5.1", features = ["html_reports"] }

[build-dependencies]
vergen-git2 = { version = "1.0.0", features = ["build", "cargo"] }

[[bench]]
name = "pawn_movegen"
harness = false
